<resources>
    <string name="app_name">StellerPortfolio</string>
    <string name="header">Rob Steller\'s App Portolio</string>
    <string name="movies">Popular Movies</string>
    <string name="stock">Stock Hawk</string>
    <string name="build">Build It Bigger</string>
    <string name="make">Make Your App Material</string>
    <string name="go">Go Ubiquitous</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="toastText">This button will launch my</string>
</resources>
