<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.stellerportfolio.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/moviesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/movies"
            android:textAllCaps="true"
            android:onClick="movies_clicked"/>

        <Button
            android:id="@+id/stockButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/stock"
            android:textAllCaps="true"
            android:onClick="stocks_clicked"/>

        <Button
            android:id="@+id/buildButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/build"
            android:textAllCaps="true"
            android:onClick="build_clicked"/>

        <Button
            android:id="@+id/makeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/make"
            android:textAllCaps="true"
            android:onClick="make_clicked"/>

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/go"
            android:textAllCaps="true"
            android:onClick="go_clicked"/>

        <Button
            android:id="@+id/capstoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/capstone"
            android:textAllCaps="true"
            android:onClick="capstone_clicked"/>
    </ScrollView>
</LinearLayout>
